--- a/04-专题.md
+++ b/04-专题.md
@@ -142,3 +142,24 @@ D:.
 │   └─音乐
 ~~~
 
+
+
+## 快捷键
+
+它又被叫作 快速键 或 热键，指通过某些特定的按键、按键顺序或按键组合来完成一个操作。
+
+很多快捷键往往与如 Ctrl 键、Shift 键、Alt 键、Fn 键、 Windows 键等配合使用。
+
+
+
+快捷键分为 通用的 和 专用的。大部分的快捷键在设计时，趋向于减少用户的学习成本。
+
+
+
+链接：https://baike.baidu.com/item/%E5%BF%AB%E6%8D%B7%E9%94%AE
+
+
+
+软件本身的快捷键【比如：搜狗浏览器】
+
+![image-20230217221122556](images/image-20230217221122556.png)
